gcp/gke/istio-draft/istio/nginx2-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-apps-private
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2-deployment
  namespace: nginx-apps-private
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2-app
  template:
    metadata:
      labels:
        app: nginx2-app
    spec:
      containers:
      - name: nginx-private
        image: nginx:1.14
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2-service
  namespace: nginx-apps-private
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx2-app
