gcp/gke/istio-draft/istio/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: nginx-public-gateway
  # namespace: nginx-apps-public
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same



# Old model 
# apiVersion: networking.istio.io/v1beta1
# kind: Gateway
# metadata:
#   name: nginx-public-gateway
#   namespace: nginx-apps-public
# spec:
#   selector:
#     istio: ingressgateway
#   servers:
#   - port:
#       number: 80
#       name: http
#       protocol: HTTP
#     hosts:
#     - "nginx.external"
