gcp/gke/istio-draft/istio/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx1-vs-external
  namespace: nginx-apps-public
spec:
  hosts:
  - "nginx.external"
  # gateways:
  # - nginx-public-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: nginx1-service.nginx-apps-public.svc.cluster.local
        port:
          number: 80



---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx2-vs-internal
  namespace: nginx-apps-private
spec:
  hosts:
  - "nginx.internal"
  gateways:
  - nginx-private-gateway
  http:
  - route:
    - destination:
        host: nginx2-service.nginx-apps-private.svc.cluster.local
        port:
          number: 80
